changed title and added disqus

--- a/public/404.html
+++ b/public/404.html
@@ -34,9 +34,9 @@
     <meta property="og:type" content="blog">
     <meta property="og:title" content="404 Page not found">
     <meta property="og:url" content="">
-    <meta property="og:site_name" content="KSLHacks – // TODO: inspire, create, hack, enjoy">
+    <meta property="og:site_name" content="// TODO: inspire, create, hack, enjoy">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="KSLHacks – // TODO: inspire, create, hack, enjoy">
+    <meta name="twitter:title" content="// TODO: inspire, create, hack, enjoy">
     <meta name="twitter:description" content="Kevin Leung&#39;s Blog">
     
       <meta name="twitter:creator" content="@KSLHacks">
